# turtlefun

./: LICENSE  README.md  math.tex  pyproject.toml  video-notes.txt
src/turtlefun/: __init__.py  qualityldraw.py  samplevalues.py  turtle.py  turtle_animate_line.py  turtle_codewindow.py  turtle_explorer.py  turtle_slideshow.py  turtlefun.py  turtlefun_quotientlist_generation.py  turtlent.py  turtlent_noreturn_exploration.py
tests/: test_animation.py  test_console.py  test_explorer.py  test_turtle.py  test_turtlent.py
